Fix contrast ratio for price text

--- a/src/styles/navigation.module.css
+++ b/src/styles/navigation.module.css
@@ -28,5 +28,5 @@
 }
 
 .navigationalPrice del {
-  color: var(--color-neutral-6);
+  color: var(--color-neutral-5);
 }
